@@ -12,6 +12,10 @@ What's New in Python 3.1.2?
 Core and Builtins
 -----------------
 
+- Issue #1722344: threading._shutdown() is now called in Py_Finalize(), which
+  fixes the problem of some exceptions being thrown at shutdown when the
+  interpreter is killed. Patch by Adam Olsen.
+
 - Issue #7065: Fix a crash in bytes.maketrans and bytearray.maketrans when
   using byte values greater than 127.  Patch by Derk Drukker.
 
